--- a/sass/demo.scss
+++ b/sass/demo.scss
@@ -38,6 +38,10 @@ h6 {
   }
 }
 
+.img-circle {
+  margin: 0 2em;
+}
+
 .coloured-background {
   background-color: $grey-light;
   margin-top: 1em;
@@ -59,9 +63,6 @@ h6 {
   margin-top: 1em;
   h1 {
     margin-bottom: 0.5em;
-  }
-  li:not(:last-of-type) {
-    margin-bottom: 1.5em;
   }
 }
 
